<resources>
    <string name="app_name">NoteManager</string>

    <integer name="com_vk_sdk_AppId">5414533</integer>
    <string name="action_settings">Настройки</string>
    <string name="share_socials">Поделиться</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="update_photo">Обновить фото</string>
    <string name="choose_priority">Выбрать приоритет</string>
    <string name="priority">Приоритет</string>
    <string name="choose_gps">Вставить GPS-координаты</string>
    <string name="rename_head">Переименовать</string>
    <string name="properties">Прикрепить</string>
    <string name="back">Назад</string>
    <string name="import_as_file">Импортировать в файл</string>
    <string name="head">Заголовок</string>
    <string name="create_note">Создать заметку</string>
    <string name="photo">Фотография</string>
    <string name="google_map">GPS-координаты</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_activity_properties">Свойства</string>
</resources>
